// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`顧客向けメールの件名・本文 snapshot (#4507) > cancellation の件名・本文が変わっていない 1`] = `
{
  "hasListUnsubscribe": false,
  "subject": "【がんばりクエスト】解約手続きを受け付けました",
  "text": "解約手続きを受け付けました

2026年9月30日 まで、現在の有料プランをそのままご利用いただけます。
その後は無料プランに切り替わります（お子さまの記録は残ります）。

それまでの間は、ご家族の見守り画面の「プラン・お支払い」からいつでも解約のお手続きを取り消して継続できます。",
}
`;

exports[`顧客向けメールの件名・本文 snapshot (#4507) > deletion-complete の件名・本文が変わっていない 1`] = `
{
  "hasListUnsubscribe": false,
  "subject": "【がんばりクエスト】データの削除が完了しました",
  "text": "データの削除が完了しました

がんばりクエストにお預かりしていたデータの削除が完了しました。
削除したデータは復元できません。
ご利用いただきありがとうございました。
再びご利用いただく場合は、新しいアカウントとしてお申し込みください。",
}
`;

exports[`顧客向けメールの件名・本文 snapshot (#4507) > deletion-reserved の件名・本文が変わっていない 1`] = `
{
  "hasListUnsubscribe": false,
  "subject": "【がんばりクエスト】退会（アカウント削除）のお申し込みを受け付けました",
  "text": "やまだ 様

退会（アカウント削除）のお申し込みを受け付けました。
お申し込みから7日後の2026年9月30日に、すべてのデータを削除します。
削除日まではご家族の見守り画面からお取り消しいただけます。削除後のデータは復元できません。
記録を手元に残される場合は、削除日までに書き出しをお願いいたします。

アカウント設定を開く: https://ganbari-quest.com/admin/settings/account

本メールはお手続きに関する重要なご連絡のため、メールの配信設定にかかわらずお送りしています。",
}
`;

exports[`顧客向けメールの件名・本文 snapshot (#4507) > deletion-warning の件名・本文が変わっていない 1`] = `
{
  "hasListUnsubscribe": false,
  "subject": "【がんばりクエスト】データ削除予定日のお知らせ（あと 14 日）",
  "text": "やまだ 様

お申し出いただいたアカウント退会の手続きについてお知らせします。
データの削除予定日: 2026年9月30日（あと 14 日）
削除予定日を過ぎるとデータは元に戻せません。

削除予定日までは、ご家族の見守り画面の「アカウント」から取り消し（復元）ができます。
このまま削除をご希望の場合、お手続きは不要です。

アカウント設定を開く: https://ganbari-quest.com/admin/settings/account

このお知らせはお手続きに関する大切なご連絡のため、メール配信設定にかかわらずお送りしています。",
}
`;

exports[`顧客向けメールの件名・本文 snapshot (#4507) > dormant-reactivation の件名・本文が変わっていない 1`] = `
{
  "hasListUnsubscribe": true,
  "subject": "お元気でいらっしゃいますか",
  "text": "やまだ 様

がんばりクエスト の運営です。
最後にログインされてから 120 日が経過しました。
お子さまが卒業されたなら、何よりの成果です。
もし戻りたい場合は、いつでもログインできます。
お忘れの場合は、パスワードリセットも可能です。

ログイン画面を開く: https://ganbari-quest.com/auth/login

配信停止: https://ganbari-quest.com/unsubscribe/tenant-0001.marketing.AcgdgLgha7mnMR65FXOpQ2X-hEraEQMzzRhe-u1O8Qc",
}
`;

exports[`顧客向けメールの件名・本文 snapshot (#4507) > inquiry-confirmation の件名・本文が変わっていない 1`] = `
{
  "hasListUnsubscribe": false,
  "subject": "【がんばりクエスト】お問い合わせを受け付けました（INQ-0001）",
  "text": "お問い合わせを受け付けました

お問い合わせ番号: INQ-0001
いただいた内容を確認し、必要に応じてご返信いたします。",
}
`;

exports[`顧客向けメールの件名・本文 snapshot (#4507) > license-renewal-reminder の件名・本文が変わっていない 1`] = `
{
  "hasListUnsubscribe": true,
  "subject": "次回更新予定日のお知らせ（残り7日）",
  "text": "やまだ 様

いつも がんばりクエスト をご利用いただきありがとうございます。

ご契約プラン: スタンダード月額
次回更新予定日: 2026年9月30日（残り 7 日）

サービスを継続される場合は、お支払い情報をご確認ください。
卒業（解約）をご希望の場合は、ご家族の見守り画面から手続きできます。

プラン管理ページを開く: https://ganbari-quest.com/admin/subscription

配信停止: https://ganbari-quest.com/unsubscribe/tenant-0001.marketing.AcgdgLgha7mnMR65FXOpQ2X-hEraEQMzzRhe-u1O8Qc",
}
`;

exports[`顧客向けメールの件名・本文 snapshot (#4507) > member-joined の件名・本文が変わっていない 1`] = `
{
  "hasListUnsubscribe": false,
  "subject": "【がんばりクエスト】新しいメンバーが参加しました",
  "text": "はなこ さんが「保護者」として家族グループに参加しました。",
}
`;

exports[`顧客向けメールの件名・本文 snapshot (#4507) > member-removed の件名・本文が変わっていない 1`] = `
{
  "hasListUnsubscribe": false,
  "subject": "【がんばりクエスト】家族グループからの除外通知",
  "text": "家族グループ「やまだ家」のオーナーにより、メンバーから除外されました。
新しい招待リンクがあれば、別のグループに参加できます。",
}
`;

exports[`顧客向けメールの件名・本文 snapshot (#4507) > ownership-transferred の件名・本文が変わっていない 1`] = `
{
  "hasListUnsubscribe": false,
  "subject": "【がんばりクエスト】オーナー権限が移譲されました",
  "text": "はなこ 様

家族グループの「オーナー」権限があなたに移譲されました。メンバーの招待・削除や、プラン・お支払いのお手続きが行えます。

メンバー管理を開く: https://ganbari-quest.com/admin/members",
}
`;

exports[`顧客向けメールの件名・本文 snapshot (#4507) > payment-failed-notice の件名・本文が変わっていない 1`] = `
{
  "hasListUnsubscribe": false,
  "subject": "【がんばりクエスト】お支払いを確認できませんでした（残り7日）",
  "text": "やまだ 様

ご登録のお支払い方法で、有料プランの更新料をお引き落としできませんでした。カードの有効期限切れや限度額超過が主な原因です。
ご契約プラン: スタンダード月額
2026年9月30日（残り7日）までにお支払い方法を更新いただければ、これまでどおりご利用いただけます。
更新がないまま期限を過ぎると、有料プランの機能は停止し、無料プランのご利用に切り替わります。

お支払い方法を更新する: https://ganbari-quest.com/admin/subscription

本メールはご契約に関する重要なご連絡のため、メールの配信設定にかかわらずお送りしています。",
}
`;

exports[`顧客向けメールの件名・本文 snapshot (#4507) > pin-reset-code の件名・本文が変わっていない 1`] = `
{
  "hasListUnsubscribe": false,
  "subject": "【がんばりクエスト】おやカギコード再設定の確認コード",
  "text": "おやカギコード再設定の確認コード

おやカギコードの再設定をご希望の場合は、以下の確認コードを入力してください。

123456

このコードは10分間有効です。
このメールに心当たりがない場合は、操作せずにこのまま無視してください。",
}
`;

exports[`顧客向けメールの件名・本文 snapshot (#4507) > pmf-survey の件名・本文が変わっていない 1`] = `
{
  "hasListUnsubscribe": true,
  "subject": "がんばりクエストに関するアンケートのお願い",
  "text": "やまだ 様

いつも がんばりクエスト をご利用いただきありがとうございます。

サービス改善のため、半年に 1 度ご利用状況についてお伺いしております。回答は任意で、所要時間は 1〜2 分です。

今回のアンケート: R1

アンケートに回答する: https://example.com/survey

回答内容は統計目的でのみ利用し、個別のお問い合わせには使用しません。

配信停止: https://ganbari-quest.com/unsubscribe/tenant-0001.marketing.AcgdgLgha7mnMR65FXOpQ2X-hEraEQMzzRhe-u1O8Qc",
}
`;

exports[`顧客向けメールの件名・本文 snapshot (#4507) > trial-ended-today の件名・本文が変わっていない 1`] = `
{
  "hasListUnsubscribe": false,
  "subject": "【がんばりクエスト】トライアル期間が終了しました",
  "text": "トライアル期間が終了しました

スタンダードプランのトライアル期間が終了しました。
現在は無料プランでのご利用となります。
無料プランの上限を超えるお子さま・活動・チェックリストは一時的に非表示（アーカイブ）になります（データは残っており、有料プランにアップグレードすると自動で元に戻ります）。
90日を超えた履歴（記録）は削除され、復元できません（再契約でも戻りません）。

プラン確認: https://ganbari-quest.com/admin/subscription",
}
`;

exports[`顧客向けメールの件名・本文 snapshot (#4507) > trial-ending-1day の件名・本文が変わっていない 1`] = `
{
  "hasListUnsubscribe": false,
  "subject": "【がんばりクエスト】トライアルが明日終了します",
  "text": "トライアルが明日終了します

スタンダードプランのトライアル期間は明日（2026年9月30日）に終了します。
終了後は無料プランに切り替わります。
無料プランの上限を超えるお子さま・活動・チェックリストは一時的に非表示（アーカイブ）になります（データは残っており、有料プランにアップグレードすると自動で元に戻ります）。
90日を超えた履歴（記録）は削除され、復元できません（再契約でも戻りません）。

プラン確認: https://ganbari-quest.com/admin/subscription",
}
`;

exports[`顧客向けメールの件名・本文 snapshot (#4507) > trial-ending-3days の件名・本文が変わっていない 1`] = `
{
  "hasListUnsubscribe": false,
  "subject": "【がんばりクエスト】トライアル期間が残り3日です",
  "text": "トライアル期間が残り3日です

スタンダードプランのトライアル期間は 2026年9月30日 に終了します。
終了後は無料プランに切り替わります。
履歴（記録）の保持期間: 90日
90日を超えた履歴（記録）は削除され、復元できません（再契約でも戻りません）。

引き続きご利用いただくには、本契約へのお申し込みをお願いいたします。

プラン確認: https://ganbari-quest.com/admin/subscription",
}
`;

exports[`顧客向けメールの件名・本文 snapshot (#4507) > weekly-report の件名・本文が変わっていない 1`] = `
{
  "hasListUnsubscribe": false,
  "subject": "🌟 たろうの今週のがんばり（2026年9月1日〜9月7日）",
  "text": "たろうの今週のがんばり（2026年9月1日〜9月7日）

おてつだい: 5回

🔥 連続記録: 3日
⭐ ポイント: +120pt（累計: 980pt）",
}
`;

exports[`顧客向けメールの件名・本文 snapshot (#4507) > welcome の件名・本文が変わっていない 1`] = `
{
  "hasListUnsubscribe": false,
  "subject": "がんばりクエストへようこそ！",
  "text": "やまだ家さん、ようこそ！

がんばりクエストへのご登録ありがとうございます。
お子さまの毎日のがんばりを記録して、成長を見守りましょう！

ご家族の見守り画面: https://ganbari-quest.com/admin",
}
`;
